fix displaying remote storage widget on small screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -119,7 +119,7 @@ html, body {
   position:fixed; 
   left: 0px; 
   bottom: 0px;
-  z-index: 3;
+  z-index: 21000000;
   display: none;
 }
 
